sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1a/errors.dfrouter
Error: Edge 'xxx' used by detector 'MQ11Fs1' is not known.
Quitting (on error).
